WIP: OSC: bugfix. mem reg reentrance through callback caused deadlock.
CHANGES:
- Transport API: moved to one API call for flush operation type.
- PTL: added new file for memory registration and flush.
- Transport memory registration: one must now specify what registration
  type use through flags:
  - LCR_IFACE_REGISTER_MEM_DYN: dynamic memory. Typically used for
    memories that have a short period of life. For example, when send
    buffer needs to be registered when performing a lcp_put_nb, once the
    operation is completed, memory must be deregistered (or cached).
  - LCR_IFACE_REGISTER_MEM_STAT: static memory. Typically used for
    memory with longer period of life. For example, for MPI_Win.

--- a/src/MPC_Lowcomm/src/Makefile.am
+++ b/src/MPC_Lowcomm/src/Makefile.am
@@ -88,7 +88,7 @@ libmpclowcomm_la_SOURCES += ./tcp/tcp.c ./tcp/tcp_toolkit.c
 # PTL driver #
 if PORTALS4_DRIVER_ENABLED
 AM_CPPFLAGS += -I$(abs_srcdir)/ptl/
-libmpclowcomm_la_SOURCES += ./ptl/ptl_ep.c ./ptl/ptl_iface.c ./ptl/ptl_recv.c ./ptl/ptl_rd.c
+libmpclowcomm_la_SOURCES += ./ptl/ptl_ep.c ./ptl/ptl_iface.c ./ptl/ptl_recv.c ./ptl/ptl_rd.c ./ptl/ptl_rma.c
 if PORTALS4_CONTROL_FLOW_ENABLED
 libmpclowcomm_la_SOURCES += ./ptl/ptl_tk.c
 endif
