--- a/src/MPC_Common/src/Makefile.am
+++ b/src/MPC_Common/src/Makefile.am
@@ -41,7 +41,7 @@ elf_64.c: elf_32.c
 
 CLEANFILES=elf_64.c
 
-libmpccommon_la_SOURCES = aio.c bit_array.c fifo.c hashtable.c io_helper.c rank.c debug.c sctk_no_alloc.c sctk_pm_json.c flags.c debugger.c elf_32.c elf_64.c  spinlock.c base64.c recycler.c mpc_mempool.c
+libmpccommon_la_SOURCES = aio.c bit_array.c fifo.c hashtable.c io_helper.c rank.c debug.c sctk_no_alloc.c sctk_pm_json.c flags.c debugger.c elf_32.c elf_64.c  spinlock.c base64.c recycler.c mpc_mempool.c progress.c
 
 
 if MPC_PROFILER_ENABLED
