PRECOMM: Ignore mpc_common_profiler_keys.h
mpc_common_profiler_keys.h is meant to be included
into enum definitions, and cannot compile on its own.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,5 @@ repos:
 exclude: |
   (?x)
     src/MPC_IO/src/romio|
+    src/MPC_Common/include/mpc_common_profiler_keys.h|
     \.(m4|in|3in|f90)$
