--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,9 @@ repos:
           (?x)
             src/MPC_IO/src/romio|
             src/MPC_Common/include/mpc_common_profiler_keys\.h|
+            src/MPC_OpenMP/include/omp_lib\.h|
+            src/MPC_OpenMP/include/omp_lib_kinds\.h|
+            src/MPC_Fortran|
             \.(m4|in|3in|f90)$
 -   repo: git@gitlab.paratools.com:cea/mpc-pre-commit-hooks.git
     rev: 90dac57b3624db79877f93a59d218255463d708f
