PRECOMM: Ignore linux-thread-db.c
`linux-thread-db.c` no longer compiles due to missing
includes. This file is now ignored from `clang-tidy`
on pre-commit.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,11 +20,12 @@ repos:
         args: [--system-headers, --header-filter='.*', --extra-arg=-Wnounused-command-line-argument]
         exclude: |
           (?x)
-            src/MPC_IO/src/romio|
-            src/MPC_Common/include/mpc_common_profiler_keys\.h|
-            src/MPC_OpenMP/include/omp_lib\.h|
-            src/MPC_OpenMP/include/omp_lib_kinds\.h|
-            src/MPC_Fortran|
+            ^src/MPC_IO/src/romio|
+            ^src/MPC_Common/include/mpc_common_profiler_keys\.h$|
+            ^src/MPC_OpenMP/include/omp_lib\.h$|
+            ^src/MPC_OpenMP/include/omp_lib_kinds\.h$|
+            ^src/MPC_Fortran|
+            ^src/MPC_Thread_db/src/gdb/linux-thread-db\.c$|
             \.(m4|in|3in|f90)$
 -   repo: git@gitlab.paratools.com:cea/mpc-pre-commit-hooks.git
     rev: 90dac57b3624db79877f93a59d218255463d708f
