CI: Do not run pipeline on "CI::Disabled" MRs
Developers can now opt out from CI pipelines on specific
MRs with a label, independently from the Draft status.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,12 @@ variables:
   - merge_requests
   - web
 
+
+  except:
+    variables:
+      # Skip MR labeled "CI::Disabled"
+      - $CI_MERGE_REQUEST_LABELS =~ /CI::Disabled/
+
 .uses_slurm: &uses_slurm
   tags:
     - slurm
