--- a/src/MPC_Common/Makefile.am
+++ b/src/MPC_Common/Makefile.am
@@ -24,7 +24,7 @@
 
 mpc_headerdir=$(pkgincludedir)
 
-mpc_header_HEADERS= $(abs_builddir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h   $(abs_srcdir)/include/mpc_common_aio.h $(abs_srcdir)/include/mpc_common_recycler.h
+mpc_header_HEADERS= $(abs_builddir)/include/mpc_common_types.h  $(abs_srcdir)/include/mpc_common_debugger.h   $(abs_srcdir)/include/mpc_common_aio.h $(abs_srcdir)/include/mpc_common_recycler.h $(abs_srcdir)/include/mpc_common_bit.h
 
 if LCP_ENABLED
 mpc_header_HEADERS+=$(abs_srcdir)/include/uthash.h
