--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -51,7 +51,7 @@ PROJECT_BRIEF          = "Unified parallel runtime designed to improve HPC appli
 # pixels and the maximum width should not exceed 200 pixels. Doxygen will copy
 # the logo to the output directory.
 
-PROJECT_LOGO           = $(MPC_SOURCE_DIRECTORY)doc/img/mpc_logo.png
+PROJECT_LOGO           = $(MPC_SOURCE_DIRECTORY)doc/src/_static/mpc_logo.png
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) path
 # into which the generated documentation will be written. If a relative path is
