--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,11 @@
 version: 2
 build:
   os: ubuntu-22.04
-  tools: 
+  tools:
     python: "3.7"
 sphinx:
   configuration: doc/sphinx/conf.py
+  fail_on_warning: true
 python:
   install:
   - requirements: doc/requirements.txt
-
