Fixe: simplify ci branch check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ variables:
   - mkdir -p "${CI_PCVS_DIR}"
   - cd "${GL_PIPELINE_PATH}" 
   - mkdir mpc_ci 2>"/dev/null"
-      && git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.paratools.com/cea/mpc_ci.git" -b $(if [ x${CI_BRANCH} != x ]; then echo ${CI_BRANCH}; else echo master; fi) "mpc_ci"
+      && git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.paratools.com/cea/mpc_ci.git" $(test "x${CI_BRANCH}" != "x" && echo "-b ${CI_BRANCH}") "mpc_ci"
       || sleep 5s
   - cd "${CI_PCVS_DIR}"
   - echo "Step run from ${CI_PCVS_DIR}"
